// common.proto
syntax = "proto3";

option java_package = "com.luwings.common";
option java_multiple_files = true;

message Empty {
}

message MessageId {
  int64 id = 1;
}

message OperationStatus {
  bool success = 1;
  string message = 2;
}